[package]
name = "ppc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "ppc-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "ppc-client"
path = "src/client.rs"

[dependencies]
mysql = "24.0.0"
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.11"
tokio = { version = "1.32.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.9.2"
